2004-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* profile/COPYING: New file.
	* profile/CYGWIN_LICENSE: New file.
	* profile/Makefile.in (DISTFILES): Add COPYING, CYGWIN_LICENSE.

2004-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/fopen64.c: Move.
	* mingwex/fseeko64.c: Move.
	* mingwex/ftello64.c: Move.
	* mingwex/lseek64.c: Move.
	* mingwex/stdio/fopen64.c: To here.
	* mingwex/stdio/fseeko64.c: To here.
	* mingwex/stdio/ftello64.c: To here.
	* mingwex/stdio/lseek64.c: To here.

2004-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* profile/gmon.c [__MINGW32__]: Include  string.h for
	memset prototype.

2004-08-08  Christopher Faylor  <cgf@timesys.com>

	* mingwex/stdio/vwscanf.c: Add stdio.h needed after 2004-08-07 change.

2004-08-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/complex.h:  Remove __attribute__ ((const)) from
	transcendantal and trig functions.  Replace __attribute__ ((const))
	with __MINGW_ATTRIB_CONST on other declarations.

2004-08-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wchar.h: Reorganize, avoid including other headers.

2004-08-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/string.h (memchr, memcmp, strchr, strcmp, strcspn)
	(strlen, strncmp, strpbrk, strrchr, strspn, strstr): Add pure
	attribute.

2004-07-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/dirent.h (struct _wdirent): Remove obsolete comment.

2004-07-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/string.h: Revert 2004-07-26 additions of
	__ATTRIBUTE_PURE.

2004-07-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/powl.c (powl): Revert change of 2004-02-01.
	(__convert_inf_to_maxnum): New.static inline.
	(reducl): Use it to protect against Inf - Inf.
	(__fast_ldexpl): New function.  Use in lieu of ldexpl.

2004-07-27  Danny Smith  <dannysmith@users.sourceforge.net>
	